--- a/01_Shop_Approval/frontend-vue/package.json
+++ b/01_Shop_Approval/frontend-vue/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "front-vue",
+  "name": "frontend-vue",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,12 +9,11 @@
   },
   "dependencies": {
     "@tosspayments/payment-widget-sdk": "^0.10.2",
-    "axios": "^1.6.2",
-    "bootstrap-vue": "^2.23.1",
+    "axios": "^1.6.8",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14",
-    "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.3",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -27,7 +26,6 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0",
-    "vue-template-compiler": "^2.6.14"
+    "sass-loader": "^12.0.0"
   }
 }
