--- a/01_Shop_Approval/SimpleDMS/src/main/resources/application.properties
+++ b/01_Shop_Approval/SimpleDMS/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # \uC11C\uBC84 \uD3EC\uD2B8
 server.port=8000
 
-# \uC624\uB77C\uD074 \uC124\uC815 : log4j \uC801\uC6A9 : \uB3C4\uCEE4
+# \uC624\uB77C\uD074 \uC124\uC815 : logback \uC801\uC6A9 : \uB3C4\uCEE4
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.url=jdbc:log4jdbc:oracle:thin:@192.168.35.172:1521/xepdb1
 spring.datasource.username=scott
