WebConfig 수정 , Controller 수정
WebConfig 수정 , Controller 수정

--- a/01_Shop_Approval/SimpleDMS/src/main/resources/application.properties
+++ b/01_Shop_Approval/SimpleDMS/src/main/resources/application.properties
@@ -12,6 +12,9 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
 spring.jpa.properties.hibernate.default_batch_fetch_size=1000
 
+# frontend \uC8FC\uC18C
+simpleDms.app.front-url=http://localhost:8080
+
 # resource/schema.sql \uC11C\uBC84 \uAC00\uB3D9\uC2DC \uC790\uB3D9 \uC2E4\uD589
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
